--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,13 @@
     "license": "BSD-3-Clause",
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7",
+        "php": ">=7.1",
+        "ext-intl": "*",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "vlucas/phpdotenv": "^3.4",
-        "yii2tech/ar-softdelete": "^1.0"
+        "yii2tech/ar-softdelete": "^1.0",
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
