Implementação da criacao de uma conta com matricula e contas futuras

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "vlucas/phpdotenv": "^3.4",
         "yii2tech/ar-softdelete": "^1.0",
+        "2amigos/yii2-date-picker-widget": "^1.0",
+        "kartik-v/yii2-money": "^1.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
