implementação da geração dos recibos

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "vlucas/phpdotenv": "^3.4",
         "yii2tech/ar-softdelete": "^1.0",
         "2amigos/yii2-date-picker-widget": "^1.0",
-        "kartik-v/yii2-money": "^1.2"
+        "kartik-v/yii2-money": "^1.2",
+        "kartik-v/yii2-mpdf": "^1.0",
+        "wgenial/numeroporextenso": "^3.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
