--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,7 @@ DOCKER_APP_PORT=8000
 DOCKER_APP_SERVICE_NAME=yii2-skeleton-app
 DOCKER_DB_SERVICE_NAME=yii2-skeleton-db
 DOCKER_MYSQL_PORT=4500
+DOCKER_TIMEZONE=America/Fortaleza
 XDEBUG_REMOTE_HOST=
 XDEBUG_REMOTE_PORT=9000
 
